--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ body {
 
 .publications .pub-block .pub-bibtex pre {
     width: 97%;
+    font-family: inherit;
     margin-left: 1.5%;
     margin-right: 1.5%;
     margin-bottom: 6px;
